--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=bff-agendador-tarefas
 
 usuario.url=localhost:8080/usuario
 agendador-tarefas.url=localhost:8080/tarefas
+notificacao.url=localhost:8080/email
+
+cron.horario=0 0/5 * * * ?
+
+usuario.email=admin@admin.com
+usuario.senha=1234
