--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=bff-agendador-tarefas
 
 usuario.url=localhost:8080/usuario
-agendador-tarefas.url=localhost:8080/tarefas
-notificacao.url=localhost:8080/email
+agendador-tarefas.url=localhost:8081/tarefas
+notificacao.url=localhost:8082/email
+server.port=8083
 
 cron.horario=0 0/5 * * * ?
 
